--- a/package.json
+++ b/package.json
@@ -7,21 +7,8 @@
     "test": "parcel src/index.html",
     "browse": "open http://localhost:1234/",
     "build": "parcel build src/index.html -d docs",
+    "build:nomin": "yarn run build",
     "stop": "lsof -P | grep ':1234' | awk '{print $2}' | xargs kill -9"
-  },
-  "postcss": {
-    "modules": true,
-    "plugins": {
-      "autoprefixer": {
-        "grid": true,
-        "browsers": [
-          "> 10% in JP",
-          "last 2 versions", "last 2 major versions",
-          "not < 5%",
-          "ie >= 11", "Firefox ESR", "last 3 Edge major versions"
-        ]
-      }
-    }
   },
   "repository": {
     "type": "git",
