--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Boilerplate for making modules and mocks",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf docs/*",
+    "start": "parcel src/index.html",
     "test": "parcel src/index.html",
     "browse": "open http://localhost:1234/",
     "build": "parcel build src/index.html -d docs",
-    "build:nomin": "yarn run build --no-minify --no-cache",
+    "build:nomin": "yarn run clean && yarn run build --no-minify --no-cache",
     "stop": "lsof -P | grep ':1234' | awk '{print $2}' | xargs kill -9"
   },
   "repository": "git+https://github.com/t--takai/parcel_tutorial.git",
@@ -21,6 +23,24 @@
   },
   "homepage": "https://github.com/t--takai/parcel_tutorial#readme",
   "devDependencies": {
+    "autoprefixer": "^7.2.3",
     "parcel-bundler": "^1.2.0"
+  },
+  "postcss": {
+    "modules": true,
+    "plugins": {
+      "autoprefixer": {
+        "grid": true,
+        "browsers": [
+          "> 10% in JP",
+          "last 2 versions",
+          "last 2 major versions",
+          "not < 5%",
+          "ie >= 11",
+          "Firefox ESR",
+          "last 3 Edge major versions"
+        ]
+      }
+    }
   }
 }
