--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/t--takai/parcel_tutorial#readme",
   "devDependencies": {
     "autoprefixer": "^7.2.3",
+    "node-sass": "^4.7.2",
     "parcel-bundler": "^1.2.0"
   },
   "postcss": {
