:sparkles: postcss_module & autoprefixer :gem: :gem:

--- a/package.json
+++ b/package.json
@@ -4,13 +4,28 @@
   "description": "Boilerplate for making modules and mocks",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf docs/*",
-    "start": "parcel src/index.html",
-    "test": "parcel src/index.html",
-    "browse": "open http://localhost:1234/",
-    "build": "parcel build src/index.html -d docs",
-    "build:nomin": "yarn run clean && yarn run build --no-minify --no-cache",
-    "stop": "lsof -P | grep ':1234' | awk '{print $2}' | xargs kill -9"
+    "clean:dist" : "rm -rf dist/*",
+    "clean:docs" : "rm -rf docs/*",
+    "clean"      : "yarn run clean:dist && yarn run clean:docs",
+    "start"      : "yarn run clean:docs && parcel src/index.html",
+    "test"       : "parcel src/index.html",
+    "browse"     : "open http://localhost:1234/",
+    "build"      : "parcel build src/index.html -d docs",
+    "build:nomin": "yarn run clean:docs && yarn run build --no-minify --no-cache",
+    "stop"       : "lsof -P | grep ':1234' | awk '{print $2}' | xargs kill -9"
+  },
+  "postcss": {
+    "modules": true,
+    "plugins": {
+      "autoprefixer": {
+        "grid": true,
+        "browsers": [
+          "> 10% in JP",
+          "last 4 versions", "last 2 major versions",
+          "ie >= 11", "Firefox ESR", "last 3 Edge major versions"
+        ]
+      }
+    }
   },
   "repository": "git+https://github.com/t--takai/parcel_tutorial.git",
   "keywords": [
@@ -25,6 +40,7 @@
   "devDependencies": {
     "autoprefixer": "^7.2.3",
     "node-sass": "^4.7.2",
-    "parcel-bundler": "^1.2.0"
+    "parcel-bundler": "^1.2.0",
+    "postcss-modules": "^1.1.0"
   }
 }
