--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/t--takai/parcel_tutorial#readme",
   "devDependencies": {
     "autoprefixer": "^7.2.3",
+    "node-sass": "^4.7.2",
     "parcel-bundler": "^1.2.0",
     "postcss-modules": "^1.1.0"
   }
