--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "clean": "yarn run clean:dist && yarn run clean:docs",
     "start": "yarn run clean:docs && parcel src/index.html",
     "test": "parcel src/index.html",
+    "browse:docs": "open docs/index.html",
     "build": "parcel build src/index.html -d docs  --public-url ./",
-    "build:nomin": "yarn run clean:docs && yarn run build --no-minify --no-cache",
+    "build:nomin": "yarn run clean:docs && yarn run build --no-minify --no-cache && yarn run browse:docs",
     "stop": "lsof -P | grep ':1234' | awk '{print $2}' | xargs kill -9"
   },
   "postcss": {
