--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "homepage": "https://github.com/t--takai/parcel_tutorial#readme",
   "devDependencies": {
     "autoprefixer": "^7.2.3",
+    "babel-preset-env": "^1.6.1",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.2.0",
     "postcss-modules": "^1.1.0"
