--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.2.0",
     "postcss-modules": "^1.1.0",
-    "posthtml-img-autosize": "^0.1.1"
+    "posthtml-img-autosize": "^0.1.1",
+    "yakuhanjp": "^2.0.0"
   }
 }
