--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "clean:dist": "rm -rf dist/*",
     "clean:docs": "rm -rf docs/*",
-    "clean": "yarn run clean:dist && yarn run clean:docs",
+    "clean:cache": "rm -rf .cache/*",
+    "clean": "yarn run clean:dist && yarn run clean:docs && yarn run clean:cache",
     "start": "yarn run clean:docs && parcel src/index.html",
-    "test": "parcel src/index.html",
     "browse:docs": "open docs/index.html",
+    "browse:dist": "open -a 'Google Chrome Canary' dist/index.html",
     "build": "parcel build src/index.html -d docs  --public-url ./",
     "build:nomin": "yarn run clean:docs && yarn run build --no-minify --no-cache && yarn run browse:docs",
+    "build:predist": "yarn run clean:dist && parcel build src/index.html -d dist  --public-url ./ --no-minify --no-cache",
+    "echo": "echo \"Error: no echo specified\" ",
+    "test": "yarn run build:predist && yarn run browse:dist",
     "stop": "lsof -P | grep ':1234' | awk '{print $2}' | xargs kill -9"
   },
   "postcss": {
