--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:nomin": "yarn run clean:docs && yarn run build --no-minify --no-cache && yarn run browse:docs",
     "build:predist": "yarn run clean:dist && parcel build src/index.html -d dist  --public-url ./ --no-minify",
     "echo": "echo \"Error: no echo specified\" ",
-    "test": "yarn run build:predist && yarn run browse:dist",
+    "test": "yarn run clean:cache && yarn run build:predist && yarn run browse:dist",
     "stop": "lsof -P | grep ':1234' | awk '{print $2}' | xargs kill -9"
   },
   "postcss": {
